@@ -54,6 +54,18 @@ else
 	make sources.list.$TYPE
 fi
 
+# localudebs support
+apt-ftparchive packages $LOCALUDEBDIR > $LOCALUDEBDIR/Packages
+cat $LOCALUDEBDIR/Packages | gzip > $LOCALUDEBDIR/Packages.gz
+if [ -s $LOCALUDEBDIR/Packages ]; then
+	echo "*" >&2
+	echo "* Warning: Building with localudebs." >&2
+	echo "* Secure apt validation will be disabled for this build." >&2
+	echo "* This build should not be used for official purposes." >&2
+	echo "*" >&2
+	SECOPTS="--allow-unauthenticated"
+fi
+
 # All these options make apt read the right sources list, and use APTDIR for
 # everything so it need not run as root.
 APT_GET="apt-get --assume-yes \
@@ -62,7 +74,8 @@ APT_GET="apt-get --assume-yes \
 	-o Debug::NoLocking=true \
 	-o Dir::Cache=`pwd`/$APTDIR/cache \
 	-o Acquire::Retries=3 \
-	-o Apt::Architecture=`dpkg-architecture -qDEB_HOST_ARCH`"
+	-o Apt::Architecture=`dpkg-architecture -qDEB_HOST_ARCH` \
+	$SECOPTS"
 
 # Prepare APTDIR
 mkdir -p $APTDIR/state/lists/partial
@@ -112,33 +125,23 @@ if [ "$PACKAGES" = update ]; then
 	exit 0
 fi
 
-# If there are local (u)debs, remove them from the list of things to
-# get. Then get all the (u)debs that are left to get. Note that the
-# trailing blank on the next line is significant. It makes the sed
-# below always work.
-
-needed="$PACKAGES "
-for file in `find $LOCALUDEBDIR -name "*_*" -printf "%f\n" 2>/dev/null`; do
-	package=`echo $file | cut -d _ -f 1`
-	needed=`echo " $needed " | sed "s/ $package / /g"`
-done
+# Get udebs.
 if [ "$DEBUG" = y ]; then
 	mkdir -p $DEBUGUDEBDIR
 	cd $DEBUGUDEBDIR
 	export DEB_BUILD_OPTIONS="debug"
-	$APT_GET source --build --yes $needed
+	$APT_GET source --build --yes $PACKAGES
 	cd ..
 else
-	echo Need to download : $needed
-	if [ -n "$needed" ]; then
-		$APT_GET -dy install $needed
+	echo Need to download: $PACKAGES
+	if [ -n "$PACKAGES" ]; then
+		$APT_GET -dy install $PACKAGES
 	fi
 fi
 
-# Now the (u)debs are in APTDIR/cache/archives/ and maybe LOCALUDEBDIR
-# or DEBUGUDEBDIR, but there may be other (u)debs there too besides
-# those we asked for. So link those we asked for to UDEBDIR, renaming
-# them to more useful names.
+# Now the (u)debs are in APTDIR/cache/archives/ (and maybe DEBUGUDEBDIR)
+# but there may be other (u)debs there too besides those we asked for. So
+# link those we asked for to UDEBDIR, renaming them to more useful names.
 rm -rf $UDEBDIR
 mkdir -p $UDEBDIR
 
@@ -152,10 +155,9 @@ lnpkg() {
 
 for package in $PACKAGES; do
 	lnpkg $package $APTDIR/cache/archives $UDEBDIR
-	lnpkg $package $LOCALUDEBDIR $UDEBDIR
 	lnpkg $package $DEBUGUDEBDIR $UDEBDIR
 	if [ ! -e $UDEBDIR/$package.$TYPE ]; then
-		echo "Needed $package not found (looked in $APTDIR/cache/archives/, $LOCALUDEBDIR/, $DEBUGUDEBDIR/)";
+		echo "Needed $package not found (looked in $APTDIR/cache/archives/, $DEBUGUDEBDIR/)";
 		exit 1
 	fi
 done
