@@ -20,6 +20,10 @@ debian-installer (20051031) UNRELEASED; urgency=low
   * Switch to root=/dev/ram in syslinux configs to support 2.6.14 post-devfs
     kernels.
   * Did away with the kernel_specific pkg-lists directories.
+  * Back to managing localudebs with apt. To support secure apt,
+    authentication is disabled and a warning printed if there are any udebs
+    in the localudebs directory. During an official build there will not be
+    any and the downloaded udebs will be properly authenticated.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 15 Nov 2005 17:23:56 -0500
 
